# SolarEdge-to-VPS

./: .env.example  .gitignore  Architecture.md  CLAUDE.md  repository.yaml
.github/workflows/: secret-scan.yml
docs/: BACKLOG.md  P1_HOMEWIZARD_CONNECTIVITY_LESSONS.md  Project_idea.md
docs/site/: docusaurus.config.ts  package-lock.json  sidebars.ts
edge/: Dockerfile  pyproject.toml
edge/src/: __init__.py  config.py  health.py  main.py  normalizer.py  poller.py  registers.py  spool.py
edge/tests/: __init__.py  conftest.py  test_config.py  test_health.py  test_main.py  test_normalizer.py  test_poller.py  test_registers.py  test_spool.py  test_uploader.py
edge/tests/fixtures/: modbus_responses.json
sungrow_edge/: Dockerfile  README.md  build.yaml  config.yaml  reconcile_registers.py  run.sh  scan_registers.py
vps/: Caddyfile  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
vps/src/: __init__.py
vps/src/api/: __init__.py  deps.py  health.py  ingest.py  main.py  realtime.py  series.py
vps/src/auth/: __init__.py  bearer.py
vps/src/cache/: __init__.py  redis_client.py
vps/src/db/: __init__.py  models.py  session.py
vps/src/db/migrations/: __init__.py  env.py
vps/src/db/migrations/versions/: 001_initial_schema.py  002_continuous_aggregates.py  __init__.py
vps/src/services/: __init__.py  aggregation.py  ingestion.py
vps/tests/: __init__.py  conftest.py  test_app.py  test_auth.py  test_health.py  test_ingest.py  test_models.py  test_realtime.py  test_series.py
vps/tests/fixtures/: sample_data.json
(+30 files in other folders)
